--- a/public_html/index.html
+++ b/public_html/index.html
@@ -11,9 +11,9 @@ and open the template in the editor.
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="css/snake-style.css">
     </head>
-    <body>
-        <canvas id="game-screen"></canvas>
-        
-        <script src="js/snake.js"></script>
-    </body>
+<body>
+    <nav>
+        <a href="easy.html">EASY</a>
+    </nav>
+</body>
 </html>
