--- a/public_html/Hard.html
+++ b/public_html/Hard.html
@@ -9,9 +9,9 @@ and open the template in the editor.
         <title>Ramon De La Torre-Snake</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" type="text/css" href="css/snake-style.css">
+         <link rel="stylesheet" type="text/css" href="css/snake-style.css">
     </head>
-<body>
+    <body>
     <nav>
         <a href="index.html">EASY</a>
         <a href="medium.html">MEDIUM</a>
@@ -19,7 +19,7 @@ and open the template in the editor.
     </nav>
     <canvas id="game-screen"></canvas>
     
-    <script src="js/snake.js"></script>
+    <script src="js/Hard.js"></script>
     
-</body>
+    </body>
 </html>
